--- a/posts/dev/type-challenge-pick.mdx
+++ b/posts/dev/type-challenge-pick.mdx
@@ -45,17 +45,14 @@ type MyPick<T, K extends keyof T> = {
 ### 풀이 과정
 
 > 1. `TodoPreview`가 `MyPick`과 일단 같아야 된다.
-
-- todo에 TodoPreview 대신 MyPick<Todo, ‘title’ | ‘completed’>가 들어가도 적용이 되어야 한다.
-
+>
+> - todo에 TodoPreview 대신 MyPick`<'Todo', ‘title’ | ‘completed’>`가 들어가도 적용이 되어야 한다.
+>
 > 2. Todo의 type은 `title, description, completed를 key로 하는 객체(interface)`이다.
-
 > 3. MyPick이 통과 하려면 일단 MyPick은 `객체`가 되어야 한다.
 >    `key는 Todo 타입인 K, value는 T[K]`
-
 > 4. 내장 지네릭은 `객체 안에 들어올 수 있는 타입을 정하도록 도와주는 개념`이라고 이해했다.
 >    `들어오는 타입의 매개변수 화`
-
 > 5. MyPick의 지네릭을 보면 `<T, K>`인데 만약 `{[P in K] : T[P]}`이라고 할 경우, `K가 만약 todo의 key가 아닌 다른 타입의 키`가 오면 `error 발생`한다.
 
 - 그래서 K가 `Todo의 타입`이 될 수 있도록 해야한다.
@@ -68,8 +65,6 @@ type MyPick<T, K extends keyof T> = {
 ### 새롭게 알게 된 내용
 
 `Pick<T, K>`
-
->
 
 - T 타입으로부터 K 프로퍼티만 추출하도록 도와주는 `유틸리티` 타입
 - 즉, `T 내에서` Union 타입 `k의 프로퍼티에 대한 타입들을 뽑아내는 것`
