docs : modify mdx file(type challenge - pick, readonly)

--- a/posts/dev/type-challenge-readonly.mdx
+++ b/posts/dev/type-challenge-readonly.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Type Chellenge - Readonly"
+title: "Readonly"
 createdAt: "2022-11-09 16:54"
-description: 유틸리티 타입인 readonly에 대해 알아보자
+description: Type Challenge - Readonly
 thumbnailUrl: "/typescript/typechallenge.png"
 tags: ["Type Challenge", "TypeScript"]
 category: "TypeScript"
