--- a/posts/dev/type-challenge-pick.mdx
+++ b/posts/dev/type-challenge-pick.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Type Chellenge - Pick"
+title: "Pick"
 createdAt: "2022-11-09 16:54"
-description: 유틸리티 타입인 Pick에 대해 알아보자
+description: Type Challenge - Pick
 thumbnailUrl: "/typescript/typechallenge.png"
 tags: ["Type Challenge", "TypeScript"]
 category: "TypeScript"
